# api/models/user.go
@@ -28,7 +28,6 @@ type UserRes struct {
 	Id       string `json:"id"`
 	FullName string `json:"full_name"`
 	Email string `json:"email"`
-	Password string `json:"password"`
 	DateOfBirth string `json:"date_of_birth"`
 	ProfileImg string `json:"profile_img"`
 	Card string `json:"card"`
